# issue_insight_tracker

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  worker.py
backend/db/: database.py
backend/routers/: app.py  file_router.py  issue_router.py  websocket.py
backend/schemas/: __init__.py  issue_db_schema.py  issue_schema.py  scheduler_schema.py  user_roles.py
frontend/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
frontend/src/: app.d.ts  app.html
frontend/src/lib/chart/: severityChart.svelte
frontend/src/lib/components/: header.svelte
frontend/src/lib/issues/: issueManagement.js  issueManagement.ts  roles.js
frontend/src/lib/styles/: dashboard.css
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/auth/: +page.svelte
frontend/src/routes/dashboard/: +page.server.ts  +page.svelte  +page.ts
frontend/static/css/: common.css
